# dagger_example

./: .editorconfig  Dockerfile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  post_create.sh
.github/workflows/: dagger_ci.yaml  gh_actions_ci.yaml
ci/: test_base.py
tests/: conftest.py  test_evaluation.py  test_preprocessor.py  test_recommender.py
tests/resources/: processed_ratings.csv
